infra/k8s/comments-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: comments-depl

spec:
  replicas: 1 # number pods
  selector: # which pod to manage
    matchLabels:
      app: comments

  template: # how a pod look like
    metadata:
      labels:
        app: comments
    spec:
      containers:
        - name: comments
          image: sanjayadhi/comments:latest
          imagePullPolicy: Never # importent
          resources:
            limits:
              memory: "128Mi"
              cpu: "500m"
---
apiVersion: v1
kind: Service
metadata:
  name: comments-srv
spec:
  selector:
    app: comments # same label
  ports:
    - name: comments
      protocol: TCP
      port: 4001
      targetPort: 4001
