infra/k8s/event-bus-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: event-bus-depl

spec:
  replicas: 1 # number pods
  selector: # which pod to manage
    matchLabels:
      app: event-bus

  template: # how a pod look like
    metadata:
      labels:
        app: event-bus
    spec:
      containers:
        - name: event-bus
          image: sanjayadhi/event-bus:latest
          imagePullPolicy: Never # importent
          resources:
            limits:
              memory: "128Mi"
              cpu: "500m"
---
apiVersion: v1
kind: Service
metadata:
  name: event-bus-srv
spec:
  selector:
    app: event-bus # same label
  ports:
    - name: event-bus
      protocol: TCP
      port: 4005
      targetPort: 4005
