infra/k8s/moderation-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: moderation-depl

spec:
  replicas: 1 # number pods
  selector: # which pod to manage
    matchLabels:
      app: moderation

  template: # how a pod look like
    metadata:
      labels:
        app: moderation
    spec:
      containers:
        - name: moderation
          image: sanjayadhi/moderation:latest
          # imagePullPolicy: Never # importent
          resources:
            limits:
              memory: "128Mi"
              cpu: "500m"
---
apiVersion: v1
kind: Service
metadata:
  name: moderation-srv
spec:
  selector:
    app: moderation # same label
  ports:
    - name: moderation
      protocol: TCP
      port: 4003
      targetPort: 4003
