infra/k8s/query-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: query-depl

spec:
  replicas: 1 # number pods
  selector: # which pod to manage
    matchLabels:
      app: query

  template: # how a pod look like
    metadata:
      labels:
        app: query
    spec:
      containers:
        - name: query
          image: sanjayadhi/query:latest
          imagePullPolicy: Never # importent
          resources:
            limits:
              memory: "128Mi"
              cpu: "500m"
---
apiVersion: v1
kind: Service
metadata:
  name: query-srv
spec:
  selector:
    app: query # same label
  ports:
    - name: query
      protocol: TCP
      port: 4002
      targetPort: 4002
